Fix info-container not covering screen completely

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,8 @@
 }
 
 html {
+  position: relative;
+  min-height: 100%;
   background: $bg-color;
   background: $bg-gradient;
   background-size: cover;
@@ -15,7 +17,6 @@ html {
 
 html,
 body {
-  min-height: 100%;
   font-size: 100%;
   color: $text-color;
 }
